--- a/learning_logs/templates/learning_logs/edit_entry.html
+++ b/learning_logs/templates/learning_logs/edit_entry.html
@@ -1,13 +1,23 @@
 {% extends "learning_logs/base.html" %}
+{% load bootstrap3 %}
+
+{% block header %}
+  <h2>Edit entry:</h2>
+{% endblock header %}
 
 {% block content %}
-  <p>
+  <ul>
+    <li>
+      <h3>
     <a href="{% url 'learning_logs:topic' topic.id %}">{{topic}}</a>
-  </p>
-  <p>Edit entry:</p>
-  <form action="{% url 'learning_logs:edit_entry' entry.id %}"method='post'>
+      </h3>
+  	</li>
+  </ul>
+  <form action="{% url 'learning_logs:new_entry' topic.id %}"method='post'>
   	{% csrf_token %}
   	{{ form.as_p }}
-  	<button name='submit'>save changes</button>
-  </form>
+  	{% buttons %}
+	  <button name="submit" class="btn btn-primary">save changes</button>
+	{% endbuttons %}
+   </form>
 {% endblock content %}
